--- a/uos3/configUp/templates/configUp/index.html
+++ b/uos3/configUp/templates/configUp/index.html
@@ -2,15 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>UoS3 Telecommand Server</title>
+		<title>UoS³ Telecommand Server</title>
 	</head>
 	<body>
-		<h1>Hello world.</h1>
-
-		<form action="/command/send" method="post">
-			{% csrf_token %}
-			<table> {{ form }} </table>
-			<input type="submit" value="send command"/>
-		</form>
+		<h1>You are looking at the Telecommand Server of the UoS³ Project</h1>
 	</body>
 </html>
