--- a/uos3/configUp/templates/configUp/index.html
+++ b/uos3/configUp/templates/configUp/index.html
@@ -6,5 +6,8 @@
 	</head>
 	<body>
 		<h1>You are looking at the Telecommand Server of the UoS³ Project</h1>
+		<form action="/config.html" method="get">
+    <input type="submit" value="Create New Configuration"/>
+</form>
 	</body>
 </html>
