--- a/uos3/configUp/templates/configUp/config.html
+++ b/uos3/configUp/templates/configUp/config.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1>Update new CubeSat Configuration File</h1>
 
-		<form action="/configThanks.html" method="post">
+		<form method="post">
 			{% csrf_token %}
 			<table> {{ form }} </table>
 			<input type="submit" value="Save Update"/>
