--- a/uos3/configUp/templates/configUp/index.html
+++ b/uos3/configUp/templates/configUp/index.html
@@ -6,8 +6,11 @@
 	</head>
 	<body>
 		<h1>You are looking at the Telecommand Server of the UoS³ Project</h1>
-		<form action="/config.html" method="get">
+		<form action="/configUp.html" method="get">
     <input type="submit" value="Create New Configuration"/>
-</form>
+		</form>
+		<form action="/listConfigs.html" method="get">
+    <input type="submit" value="View All Unsent Configurations"/>
+		</form>
 	</body>
 </html>
