--- a/uos3/configUp/templates/configUp/configThanks.html
+++ b/uos3/configUp/templates/configUp/configThanks.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
+{% extends "configUp/base.html" %}
+{% block title %}
 		<title>UoS³ Telecommand Server Configuration Storage</title>
-	</head>
-	<body>
-		<h1>Thank you for entering a new configuration file update</h1>
-		<form action="/" method="get">
+{% endblock title %}
+{% block content %}
+	<h1>Thank you for entering a new configuration file update</h1>
+	<form action="/" method="get">
     <input type="submit" value="Go to main page"/>
-</form>
-	</body>
-</html>
+	</form>
+{% endblock content %}
