--- a/uos3/configUp/templates/configUp/configUp.html
+++ b/uos3/configUp/templates/configUp/configUp.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
+{% extends "configUp/base.html" %}
+{% block title %}
 		<title>UoS³ Telecommand Configuration Update</title>
-	</head>
-	<body>
+{% endblock title %}
+{% block content %}
 		<h1>Update new CubeSat Configuration File</h1>
-
 		<form method="post">
 			{% csrf_token %}
 			<table> {{ form }} </table>
 			<input type="submit" value="Save Update"/>
 		</form>
-	</body>
-</html>
+{% endblock content %}
