--- a/uos3/configUp/templates/configUp/listConfigs.html
+++ b/uos3/configUp/templates/configUp/listConfigs.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
+{% extends "configUp/base.html" %}
+{% block title %}
 		<title>UoS³ Telecommand Configuration List</title>
-	</head>
-	<body>
+{% endblock title %}
+{% block content %}
 		<h1>List of Unsent Configurations</h1>
-    <table>
+    <table cellspacing="10000">
       <tr><th><label for="date_sub">Date Submitted to Server:</label></th>
       <th><label for="user_sub">Submitted by:</label></th></tr>
       {% for config in object_list %}
@@ -21,5 +19,4 @@
     <form action="/" method="get">
     <input type="submit" value="Go Back to Main Page"/>
   	</form>
-	</body>
-</html>
+{% endblock content %}
