Added more logical buttons for confirmation

--- a/uos3/configUp/templates/configUp/configUp.html
+++ b/uos3/configUp/templates/configUp/configUp.html
@@ -9,4 +9,7 @@
 			<table> {{ form }} </table>
 			<input type="submit" value="Save Update"/>
 		</form>
+		<form action="/" method="get">
+	    <input type="submit" value="Go to main page"/>
+		</form>
 {% endblock content %}
