attempted binary string creation

--- a/uos3/configUp/templates/configUp/index.html
+++ b/uos3/configUp/templates/configUp/index.html
@@ -10,4 +10,7 @@
 		<form action="/listConfigs" method="get">
     <input type="submit" value="View All Unsent Configurations"/>
 		</form>
+		<form action="/listConfigsSent" method="get">
+    <input type="submit" value="View All Sent Configurations"/>
+		</form>
 {% endblock content %}
