added binary packet generation from form:

--- a/uos3/configUp/templates/configUp/base.html
+++ b/uos3/configUp/templates/configUp/base.html
@@ -10,6 +10,9 @@
     {% block title %}{% endblock title %}
 	</head>
 	<body>
+		<div class ="header">
+
+		</div>
     <div class="container">
       {% block content %}{% endblock content %}
     </div>
