--- a/uos3/configUp/templates/configUp/sendData.html
+++ b/uos3/configUp/templates/configUp/sendData.html
@@ -10,6 +10,9 @@
   		if (ask){
 				window.alert("This configuration was successfully sent");
 				form.submit();
+			}else{
+				window.location.href = "/listConfigs";
+				return false;
 			}
 		}
 		</script>
